fixed font size issues for textGridWithMedia

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -274,6 +274,9 @@
       }
       .textItemHeading {
         width: 100%;
+        > :is(h1, h2, h3, h4, h5, h6, p) {
+          font-size: toRem(29);
+        }
       }
 
       @include desktop() {
